--- a/CustomTabBar/Base.lproj/Main.storyboard
+++ b/CustomTabBar/Base.lproj/Main.storyboard
@@ -57,6 +57,7 @@
                                 <connections>
                                     <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lAy-j2-Qps"/>
                                     <action selector="menuButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="9EZ-Ri-Dyf"/>
+                                    <segue destination="dLX-eN-uai" kind="show" id="cy4-5Q-6ZS"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -77,7 +78,7 @@
             <objects>
                 <viewController storyboardIdentifier="MenuController" id="dLX-eN-uai" customClass="MenuController" customModule="CustomTabBar" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="PWf-eK-Tvm">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gqO-di-eVJ">
@@ -142,6 +143,7 @@
                         <viewLayoutGuide key="safeArea" id="QeN-JP-4P8"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="2Yt-U4-SMq"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JlC-75-iqm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
