--- a/CustomTabBar/Base.lproj/Main.storyboard
+++ b/CustomTabBar/Base.lproj/Main.storyboard
@@ -157,6 +157,21 @@
             </objects>
             <point key="canvasLocation" x="-1078.2608695652175" y="-759.375"/>
         </scene>
+        <!--Launch Controller-->
+        <scene sceneID="gnd-1S-v2A">
+            <objects>
+                <viewController storyboardIdentifier="LaunchController" id="NF9-XH-94b" customClass="LaunchController" customModule="CustomTabBar" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nsz-zN-MG2">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Urh-1g-Dfo"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qYa-RP-NC8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1116" y="77"/>
+        </scene>
         <!--Custom Tab Bar Controller-->
         <scene sceneID="6DY-Yc-jsp">
             <objects>
